; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_varint.c_lsmVarintGet32.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_varint.c_lsmVarintGet32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lsmVarintGet32(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp sle i32 %10, 240
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %5, align 8
  store i32 %15, i32* %16, align 4
  store i32 1, i32* %3, align 4
  br label %77

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp sle i32 %20, 248
  br i1 %21, label %22, label %34

22:                                               ; preds = %17
  %23 = load i32*, i32** %4, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  %25 = load i32, i32* %24, align 4
  %26 = sub nsw i32 %25, 241
  %27 = mul nsw i32 %26, 256
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  %30 = load i32, i32* %29, align 4
  %31 = add nsw i32 %27, %30
  %32 = add nsw i32 %31, 240
  %33 = load i32*, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  store i32 2, i32* %3, align 4
  br label %77

34:                                               ; preds = %17
  %35 = load i32*, i32** %4, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp eq i32 %37, 249
  br i1 %38, label %39, label %50

39:                                               ; preds = %34
  %40 = load i32*, i32** %4, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  %42 = load i32, i32* %41, align 4
  %43 = mul nsw i32 256, %42
  %44 = add nsw i32 2288, %43
  %45 = load i32*, i32** %4, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 2
  %47 = load i32, i32* %46, align 4
  %48 = add nsw i32 %44, %47
  %49 = load i32*, i32** %5, align 8
  store i32 %48, i32* %49, align 4
  store i32 3, i32* %3, align 4
  br label %77

50:                                               ; preds = %34
  %51 = load i32*, i32** %4, align 8
  %52 = getelementptr inbounds i32, i32* %51, i64 0
  %53 = load i32, i32* %52, align 4
  %54 = icmp eq i32 %53, 250
  br i1 %54, label %55, label %70

55:                                               ; preds = %50
  %56 = load i32*, i32** %4, align 8
  %57 = getelementptr inbounds i32, i32* %56, i64 1
  %58 = load i32, i32* %57, align 4
  %59 = shl i32 %58, 16
  %60 = load i32*, i32** %4, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 2
  %62 = load i32, i32* %61, align 4
  %63 = shl i32 %62, 8
  %64 = add nsw i32 %59, %63
  %65 = load i32*, i32** %4, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 3
  %67 = load i32, i32* %66, align 4
  %68 = add nsw i32 %64, %67
  %69 = load i32*, i32** %5, align 8
  store i32 %68, i32* %69, align 4
  store i32 4, i32* %3, align 4
  br label %77

70:                                               ; preds = %50
  %71 = load i32*, i32** %4, align 8
  %72 = call i32 @lsmSqlite4GetVarint64(i32* %71, i64* %6)
  store i32 %72, i32* %7, align 4
  %73 = load i64, i64* %6, align 8
  %74 = trunc i64 %73 to i32
  %75 = load i32*, i32** %5, align 8
  store i32 %74, i32* %75, align 4
  %76 = load i32, i32* %7, align 4
  store i32 %76, i32* %3, align 4
  br label %77

77:                                               ; preds = %70, %55, %39, %22, %12
  %78 = load i32, i32* %3, align 4
  ret i32 %78
}

declare dso_local i32 @lsmSqlite4GetVarint64(i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
